tests/NormalTests/paczka1/fuzzy1/60203512.err
Error in line 8: LjwXgEvgiyk A209 05,0
Error in line 5: 7sSgvvqz A768 14,3
